# GraphScope

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  Modeling_and_Traversing_a_Multimodal_Dependency_Hypergraph.txt  PROJECT_GOALS.md  README.md
.github/workflows/: almalinux-10.yml  conformance.yml  docs.yml  pytest.yml  rust-ci.yml  storage-readiness.yml  supply-chain.yml
docs/: architecture-uml.md  architecture.md  business-strategy.md  capability-matrix.md  graph-algorithms.md  hypergraph-model.md  language-analysis.md  plan.md  resolution-algorithm.md  roadmap.md  test-inventory.md
examples/demo-artifacts/: README.md  access.txt  adapters.txt  cyclonedx-evidence.txt  dashboard.json  demo.txt  diff.txt  events.txt  impact.txt  invalidation.txt  persist.txt  policy.txt  remediation-report.md  sbom.cyclonedx.json  sbom.spdx.json  sla.json  snapshot.json  vex.json
examples/demo-artifacts/durable-store/: events.tsv  index.tsv
examples/real-world/: README.md  almalinux-10-real-world.txt  almalinux-10-rpm-evidence.txt  almalinux-10-rpm.list  dnf-repolist.txt
src/: adapter.rs  advisory.rs  baseline.rs  benchmark.rs  demo.rs  event.rs  evidence.rs  export.rs  graph.rs  hypergraph.rs  ingest.rs  investigation.rs  json.rs  lib.rs  lockfile.rs  main.rs  model.rs  platform.rs  policy.rs  query.rs  repository.rs  resolver.rs  rules.rs  snapshot.rs  storage.rs  trust.rs
tests/: graphscope_behavior.rs
tests/fixtures/: README.md
tests/fixtures/go/: go.mod
tests/fixtures/gradle/: build.gradle
tests/fixtures/maven/: pom.xml
tests/fixtures/npm/: package-lock.json
tests/fixtures/rpm/: rpm-qa.txt
tests/fixtures/sbom/: cyclonedx.json
tests/python/: test_repository_contract.py
(+1 files in other folders)
