[package]
name = "graphscope"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Unified software supply-chain dependency graph prototype"

[features]
default = []
rpm = []
sqlite = []
rocksdb = []
python = []
java = []
javascript = []
go = []
cargo-adapter = []
all-adapters = [
    "rpm",
    "sqlite",
    "rocksdb",
    "python",
    "java",
    "javascript",
    "go",
    "cargo-adapter",
]

[lib]
name = "graphscope"
path = "src/lib.rs"

[[bin]]
name = "graphscope"
path = "src/main.rs"
