[package]
name = "graphscope"
version = "0.2.0"
edition = "2024"
license = "UNLICENSED"
description = "Unified software supply-chain dependency graph MVP"

[features]
default = []
rpm = []
sqlite = ["dep:rusqlite"]
rocksdb = []
python = []
java = []
javascript = []
go = []
cargo-adapter = []
all-adapters = [
    "rpm",
    "sqlite",
    "rocksdb",
    "python",
    "java",
    "javascript",
    "go",
    "cargo-adapter",
]

[lib]
name = "graphscope"
path = "src/lib.rs"

[[bin]]
name = "graphscope"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
